feat: wagger documentation
